--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -36,10 +36,11 @@ h1 {
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.6em;
   line-height: 1.5;
   color: #1a1a1a;
 }
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
